# rrhh

./: .gitignore  PLAN.md  README.md  requirements.txt
smart-filtering-poc/: .gitignore  README.md  pyproject.toml
smart-filtering-poc/app/ui_streamlit/: app.py
smart-filtering-poc/config/: default.yaml
smart-filtering-poc/src/smart_filtering/: __main__.py  cli.py  config.py
smart-filtering-poc/src/smart_filtering/assessor/: grade.py  questions.py
smart-filtering-poc/src/smart_filtering/embedder/: embed.py
smart-filtering-poc/src/smart_filtering/explainer/: explain.py
smart-filtering-poc/src/smart_filtering/generator/: cv_generator.py  jd_generator.py  run_generation.py  run_jd_generation.py
smart-filtering-poc/src/smart_filtering/normalizer/: skills_taxonomy.py
smart-filtering-poc/src/smart_filtering/parser/: docx_parser.py
smart-filtering-poc/src/smart_filtering/ranker/: features.py  score.py
smart-filtering-poc/src/smart_filtering_poc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
smart-filtering-poc/tests/: test_parser.py  test_ranker_score.py
src/smart_filtering/: __init__.py
